--- a/find_next_larger_permuted_number/Java/pom.xml
+++ b/find_next_larger_permuted_number/Java/pom.xml
@@ -13,6 +13,6 @@
 
   <groupId>none</groupId>
   <artifactId>find_next_larger_permuted_number</artifactId>
-  <version>l.0</version>
+  <version>1.0</version>
 
 </project>
